added support for html to pdf
